--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <main>
     @@include('hero/hero.html')
     @@include('advantages/advantages.html')
+    @@include('quiz/quiz.html')
 
 </main>
 
