--- a/src/blocks/modal/modal.html
+++ b/src/blocks/modal/modal.html
@@ -1,11 +1,16 @@
-<div class="modal">
+<div class="modal modal--active">
     <div class="modal__container">
         <div class="modal__wrapper">
-            <img class="modal__close" src="./img/close.svg">
-<!--            @@include('section-title/section-title.html', {sectionTitleClass: 'modal__title', sectionTitleColorClass: 'section-title&#45;&#45;black', sectionTitleText: 'Оcтавьте заявку прямо сейчас!'})-->
-            <div class="modal__subtitle">Менеджер свяжется с Вами в ближайшее время</div>
+            <div class="modal__close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.694 0.30599C24.791 0.402739 24.868 0.517674 24.9205 0.64421C24.973 0.770746 25 0.906398 25 1.0434C25 1.18039 24.973 1.31605 24.9205 1.44258C24.868 1.56912 24.791 1.68405 24.694 1.7808L1.78076 24.6946C1.5852 24.8901 1.31995 25 1.04337 25C0.766798 25 0.501551 24.8901 0.305983 24.6946C0.110415 24.499 0.000546374 24.2337 0.000546374 23.9571C0.000546374 23.6806 0.110415 23.4153 0.305983 23.2197L23.2192 0.30599C23.316 0.208995 23.4309 0.132041 23.5574 0.0795343C23.684 0.0270275 23.8196 0 23.9566 0C24.0936 0 24.2293 0.0270275 24.3558 0.0795343C24.4823 0.132041 24.5973 0.208995 24.694 0.30599Z" fill="#4D3831"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.305983 0.30599C0.208991 0.402739 0.132038 0.517674 0.0795325 0.64421C0.0270269 0.770746 0 0.906398 0 1.0434C0 1.18039 0.0270269 1.31605 0.0795325 1.44258C0.132038 1.56912 0.208991 1.68405 0.305983 1.7808L23.2192 24.6946C23.4148 24.8901 23.68 25 23.9566 25C24.2332 25 24.4984 24.8901 24.694 24.6946C24.8896 24.499 24.9995 24.2337 24.9995 23.9571C24.9995 23.6806 24.8896 23.4153 24.694 23.2197L1.78076 0.30599C1.68402 0.208995 1.56908 0.132041 1.44255 0.0795343C1.31602 0.0270275 1.18037 0 1.04337 0C0.906379 0 0.77073 0.0270275 0.644196 0.0795343C0.517662 0.132041 0.40273 0.208995 0.305983 0.30599Z" fill="#4D3831"/>
+                </svg>
+            </div>
+            <div class="modal__title">Оставьте заявку</div>
+            <div class="modal__subtitle">Для сотрудничества с нами оставьте свои данные</div>
             <div class="modal__form">
-                @@include('form/form.html', {customClass: 'form--grey'})
+                @@include('form/form.html')
             </div>
         </div>
     </div>
