- finished last-step

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     @@include('hero/hero.html')
     @@include('advantages/advantages.html')
     @@include('quiz/quiz.html')
-
+    @@include('last-step/last-step.html')
 </main>
 
 @@include('footer/footer.html')
